--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@babel/cli": "^7.6.4",
     "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
     "@types/jest": "^24.0.18",
@@ -54,8 +55,12 @@
   "dependencies": {
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
+    "@material-ui/core": "^4.6.0",
+    "axios": "^0.19.0",
+    "materialize-css": "^1.0.0-rc.2",
     "react-hot-loader": "^4.12.15",
     "react-redux": "^7.1.1",
+    "react-select": "^3.0.8",
     "redux": "^4.0.4"
   }
 }
