--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,11 @@
   "plugins": [
     "react-hot-loader/babel"
   ],
+  "plugins": [
+    [
+      "@babel/plugin-proposal-class-properties"
+    ]
+  ],
   "env": {
     "test": {
       "presets": ["@babel/preset-env", "@babel/preset-react"]
