Project complete. Working on finishing touches

--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "@babel/preset-react": "^7.6.3",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.12",
-    "@types/react": "^16.9.5",
-    "@types/react-dom": "^16.9.1",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4",
+    "@types/rx": "^4.1.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
