--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "module": "commonjs",
         "target": "es5",
         "jsx": "react",
-        "lib": ["es5", "es6", "dom"],
+        "lib": ["es5", "es6", "dom", "es2017"],
         "esModuleInterop": true,
     },
     "include": [
