--- a/package.json
+++ b/package.json
@@ -54,8 +54,11 @@
   "dependencies": {
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
+    "axios": "^0.19.2",
+    "lodash": "^4.17.15",
     "react-hot-loader": "^4.12.15",
     "react-redux": "^7.1.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   }
 }
