--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "tslint './src/**/*.ts*' --format stylish --project . --force",
     "start": "yarn run start-dev",
     "start-dev": "webpack-dev-server --config=configs/webpack/dev.js",
-    "test": "jest --watch --coverage --config=jest.config.js"
+    "test": "jest --watch --coverage --config=configs/jest.config.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
@@ -31,7 +31,7 @@
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^6.0.0",
-    "jest": "^24.9.0",
+    "jest": "^26.6.3",
     "jest-environment-enzyme": "^7.1.1",
     "jest-enzyme": "^7.1.1",
     "node-sass": "^4.13.1",
@@ -41,7 +41,8 @@
     "sass-loader": "^8.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
-    "ts-jest": "^24.1.0",
+    "terser-webpack-plugin": "^5.1.1",
+    "ts-jest": "^26.5.4",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
@@ -54,6 +55,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
+    "@hot-loader/react-dom": "16.10.2",
     "react-hot-loader": "^4.12.15",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4"
