--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "terser-webpack-plugin": "^5.1.1",
     "ts-jest": "^26.5.4",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.4",
+    "typescript": "4.5.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.41.1",
     "webpack-cli": "^3.3.9",
