--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "jest": "^26.6.3",
     "jest-environment-enzyme": "^7.1.1",
     "jest-enzyme": "^7.1.1",
-    "node-sass": "^4.13.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "rimraf": "^3.0.0",
@@ -43,6 +42,7 @@
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "ts-jest": "^26.5.4",
+    "ts-loader": "^9.3.1",
     "tslint": "^5.20.0",
     "typescript": "4.5.4",
     "uglifyjs-webpack-plugin": "^2.2.0",
@@ -58,6 +58,9 @@
     "@hot-loader/react-dom": "16.10.2",
     "react-hot-loader": "^4.12.15",
     "react-redux": "^7.1.1",
-    "redux": "^4.0.4"
-  }
+    "redux": "^4.0.4",
+    "sass": "^1.66.1",
+    "ts-loader": "~8.2.0"
+  },
+  "main": ".prettierrc.js"
 }
