build command changes

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "yarn run start-dev",
     "start-dev": "webpack-dev-server --config=configs/webpack/dev.js",
     "test": "jest --watch --coverage --config=configs/jest.config.js",
-    "build":"yarn run build"
+    "build":"npm run build"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
